--- a/app/src/components/sidebar/sidebar.css
+++ b/app/src/components/sidebar/sidebar.css
@@ -70,22 +70,3 @@
 .sidebar-link-wrapper span{
     color: var(--color-text);
 }
-
-.focus-container {
-    width: 0px;
-    height: 0px;
-    visibility: hidden;
-}
-
-@media screen and (max-width: 767px) {
-    .focus-container {
-        position: fixed;
-        visibility: visible;
-        width: 100%;
-        height: 100%;
-        min-height: 100vh;
-        background-color: rgba(99, 99, 99, 0.4);
-        
-        z-index: 940;
-    }
-}
